<resources>
    <string name="wallpaper_image_description">The wallpaper of your phone.</string>
    <string name="starlight_launcher_name">Starlight Launcher</string>
    <string name="starlight_launcher_icon_description">Icon of Starlight Launcher</string>
    <string name="starlight_launcher_source_code_url">https://www.github.com/kennethnym/StarlightLauncher</string>
    <string name="starlight_launcher_feedback_url">https://github.com/kennethnym/StarlightLauncher/discussions</string>
    <string name="starlight_launcher_author_email">kenneth.ng.nym@outlook.com</string>
    <string name="setup_activity_label">Starlight Launcher Setup</string>
    <string name="welcome_label">Welcome to</string>
    <string name="starlight_launcher_tagline">Home screen reimagined.</string>
    <string name="continue_btn_label">Continue -></string>
    <string name="setup_finish_btn_label">Finish setup</string>
    <string name="setup_feature_header">Features</string>
    <string name="setup_feature_description">Choose features you want to enable</string>
    <string name="setup_permission_header">Permissions</string>
    <string name="setup_permission_description">
        Some launcher features require permissions to work. They are optional, but some features will not work if the permissions are not granted.
    </string>
    <string name="feature_name_media_control">Media control</string>
    <string name="feature_description_media_control">Control your music right on your home screen.</string>
    <string name="permission_name_external_storage">External storage access</string>
    <string name="permission_description_external_storage">Required to provide blur effect and file searching</string>
    <string name="permission_name_notification_access">Notification access</string>
    <string name="permission_description_notification_access">Required to access currently playing media. Starlight Launcher will not read any notification.</string>
    <string name="finishing_setup">Finishing setup…</string>
    <string name="setup_finished">Setup finished!</string>
    <string name="search_box_label">Search anywhere…</string>
    <string name="search_result_section_apps">Apps</string>
    <string name="app_drawer_back_to_all_apps">Back to all apps</string>
    <string name="spotlight_overlay_description_go_next">Tap anywhere here to continue…</string>
    <string name="spotlight_overlay_description_title_widgets_panel">Widgets Panel</string>
    <string name="spotlight_overlay_description_body_widgets_panel">
        To access all your widgets, swipe up from anywhere below the search box.
        You can also interact with the visible widgets directly.
        To put the panel back, just swipe back down.
    </string>
    <string name="spotlight_overlay_description_title_launcher_menu">Launcher menu</string>
    <string name="spotlight_overlay_description_body_launcher_menu">
        To access the launcher menu, long press anywhere above the search box.
        Swipe down from anywhere to close the menu.
    </string>
    <string name="action_ok">OK</string>
    <string name="action_edit">Edit</string>
    <string name="action_archive">Archive</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_remove">Remove</string>
    <string name="action_finish">Finish</string>
    <string name="action_close">Close</string>
    <string name="status_loading">Loading…</string>
    <string name="status_not_selected">Not selected</string>
    <string name="status_selected">Selected</string>
    <string name="time_ago_today">Today %1$s</string>
    <string name="time_ago_yesterday">Yesterday %1$s</string>
    <plurals name="time_ago_days_ago">
        <item quantity="one">A day ago, %1$s</item>
        <item quantity="other">%2$d days ago, %1$s</item>
    </plurals>
    <string name="date_time_weather_separator">·</string>
    <string name="date_time_temperature_format">%1$.1f %2$s</string>
    <string name="weather_image_description">Icon of the current weather</string>
    <string name="weather_updated_message">Weather updated</string>
    <string name="widgets_panel_edit_mode_header">Long press a widget to edit it.</string>
    <string name="album_art_description">Album art of the currently playing music</string>
    <string name="no_album_title_label">No title</string>
    <string name="no_artist_label">Unknown artist</string>
    <string name="skip_backward_button_description">Skip backward</string>
    <string name="play_button_description">Play media</string>
    <string name="pause_button_description">Pause media</string>
    <string name="skip_forward_button_description">Skip forward</string>
    <string name="note_card_delete_icon_description">Delete this note</string>
    <string name="open_settings">Open settings</string>
    <string name="apps_section_title">Apps</string>
    <string name="apps_section_no_result">No relevant apps found.</string>
    <string name="files_section_title">Files</string>
    <string name="files_section_include_path_instruction">
        Open settings and add paths that you want Starlight to search in.
    </string>
    <string name="files_section_no_result">No relevant files found.</string>
    <string name="suggested_section_title">Suggested</string>
    <string name="app_icon_description">App icon for %1$s</string>
    <string name="show_more_label">Show more</string>
    <string name="pin_app_label">Pin this app</string>
    <string name="unpin_app_label">Unpin this app</string>
    <string name="uninstall_label">Uninstall</string>
    <string name="launcher_option_menu_launcher_settings_label">Launcher settings</string>
    <string name="launcher_option_menu_widgets_label">Widgets</string>
    <string name="launcher_option_menu_lock_widgets_label">Lock widgets</string>
    <string name="launcher_option_menu_edit_widgets_label">Edit widgets</string>
    <string name="available_widgets_page_header">Widgets</string>
    <string name="available_widgets_page_android_widgets">Android Widgets</string>
    <string name="available_widgets_page_starlight_widgets">Starlight Widgets</string>
    <string name="bluetooth_label">Bluetooth</string>
    <string name="bluetooth_nearby_devices_label">Nearby devices</string>
    <string name="bluetooth_device_type_icon_description">%1$s icon</string>
    <string name="bluetooth_no_nearby_devices_label">No nearby devices</string>
    <string name="open_bluetooth_settings_label">Open Bluetooth settings</string>
    <string name="bluetooth_device_connected">Connected</string>
    <string name="bluetooth_device_connecting">Connecting</string>
    <string name="bluetooth_device_disconnecting">Disconnecting</string>
    <string name="open_suggested_app">Open suggested app</string>
    <string name="web_result_label">Web Result</string>
    <string name="open_in_browser_label">Open in Browser</string>
    <string name="related_topics_label">Related</string>
    <string name="hide_topics_label">Hide topics</string>
    <string name="web_result_no_description_label">No description</string>
    <string name="related_topic_preview_description">Image preview for %1$s.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="unit_miles">Miles</string>
    <string name="unit_km">Kilometers</string>
    <string name="measurement_distance">Distance</string>
    <string name="measurement_weight">Weight</string>
    <string name="unit_converter_widget_measurement_label">Measurement:</string>
    <string name="download_folder">Download</string>
    <string name="search_header">Search behavior</string>
    <string name="widgets_header">Widgets</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">Customize StarlightLauncher</string>
    <string name="appearance_title">Appearance</string>
    <string name="appearance_subtitle">Change the appearance of Starlight</string>
    <string name="appearance_icons_section_title">Icons</string>
    <string name="appearance_icon_pack_title">Icon packs</string>
    <string name="appearance_summary">Clock, weather, icon pack</string>
    <string name="appearance_blur_effect_title">Enable blur effect</string>
    <string name="appearance_blur_effect_summary">Requires read storage permission to access the wallpaper.</string>
    <string name="appearance_blur_effect_disabled_summary">There is a bug on Android 13+ that prevents Starlight from accessing the wallpaper. Blur effect cannot be enabled.</string>
    <string name="appearance_show_pinned_apps_labels_title">Show names of pinned apps</string>
    <string name="appearance_show_pinned_apps_labels_summary">Show names of pinned apps under their icons</string>
    <string name="appearance_show_app_names_in_search_result_title">Show app names in search result</string>
    <string name="appearance_show_app_names_in_search_result_summary">Show names of apps in search results</string>
    <string name="appearance_change_icon_pack_title">Change icon pack</string>
    <string name="appearance_change_icon_pack_summary">
        Select an icon pack you want the launcher to use
    </string>
    <string name="appearance_current_icon_pack">Current icon pack</string>
    <string name="appearance_no_current_icon_pack">No current icon pack.</string>
    <string name="appearance_installed_icon_pack">Installed icon pack</string>
    <string name="appearance_no_supported_icon_packs">No supported icon packs found.</string>
    <string name="appearance_applying_icon_pack">Applying selected icon pack…</string>
    <string name="appearance_revert_icon_pack_title">Revert to system icons</string>
    <string name="appearance_revert_icon_pack_summary">Use default app icons instead.</string>
    <string name="appearance_icon_pack_already_using_default">Default icons are already in use.</string>
    <string name="appearance_is_app_drawer_enabled_title">Enable app drawer</string>
    <string name="appearance_is_app_drawer_enabled_summary">
        Shows an app drawer button in the search box.
    </string>
    <string name="pref_search_title">Search</string>
    <string name="pref_search_subtitle">Tweak how searching works in Starlight</string>
    <string name="pref_search_summary">Search result order, search engine</string>
    <string name="pref_search_layout_title">Search Layout</string>
    <string name="search_layout_summary">Adjust the layout of the search result screen.</string>
    <string name="search_category_order_title">Search category order</string>
    <string name="pref_search_layout_subtitle">
        Rearrange the order that different search categories show up on the search result page
        by long pressing and dragging them.
    </string>
    <string name="widget_layout_title">Layout</string>
    <string name="widget_layout_summary">Adjust the layout of widgets</string>
    <string name="widget_order_title">Widgets order</string>
    <string name="widget_order_summary">
        Rearrange widgets in the order that you want them to show up on the home screen.
    </string>
    <string name="file_search_title">Files</string>
    <string name="file_search_summary">Adjust how Starlight searches your files.</string>
    <string name="file_include_paths_category_header">Include paths</string>
    <string name="file_include_paths_summary">
        Add paths that you want Starlight to search in. Starlight will only search for files
        in those paths.
        To remove a path, simply tap on it.
    </string>
    <string name="file_add_path_title">Add path…</string>
    <string name="pref_clock_settings_title">Clock</string>
    <string name="pref_clock_settings_summary">Clock size, weather, 24hr</string>
    <string name="pref_clock_settings_screen_title">Clock</string>
</resources>