<?xml version="1.0" encoding="utf-8"?>
<kenneth.app.spotlightlauncher.api.view.Plate xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/media_control_blur_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/media_control_padding"
            android:layout_marginTop="@dimen/media_control_padding"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/media_cover"
                android:layout_width="@dimen/album_art_size"
                android:layout_height="@dimen/album_art_size"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/album_art_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <kenneth.app.spotlightlauncher.views.AdaptiveColorTextView
                    android:id="@+id/media_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <kenneth.app.spotlightlauncher.views.AdaptiveColorTextView
                    android:id="@+id/media_artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <kenneth.app.spotlightlauncher.views.IconButton
                    android:id="@+id/skip_backward_button"
                    android:layout_width="@dimen/media_control_button_size"
                    android:layout_height="@dimen/media_control_button_size"
                    android:contentDescription="@string/skip_backward_button_description"
                    app:icon="@drawable/ic_step_backward_alt" />

                <Space
                    android:layout_width="@dimen/media_control_button_space"
                    android:layout_height="0dp" />

                <kenneth.app.spotlightlauncher.views.IconButton
                    android:id="@+id/play_pause_button"
                    android:layout_width="@dimen/media_control_button_size"
                    android:layout_height="@dimen/media_control_button_size"
                    app:icon="@drawable/ic_play" />

                <Space
                    android:layout_width="@dimen/media_control_button_space"
                    android:layout_height="0dp" />

                <kenneth.app.spotlightlauncher.views.IconButton
                    android:id="@+id/skip_forward_button"
                    android:layout_width="@dimen/media_control_button_size"
                    android:layout_height="@dimen/media_control_button_size"
                    android:contentDescription="@string/skip_forward_button_description"
                    app:icon="@drawable/ic_skip_forward_alt" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <SeekBar
            android:id="@+id/media_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:progressTint="?colorOnBackground"
            android:thumbTint="?colorOnBackground" />

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp" />

    </LinearLayout>

</kenneth.app.spotlightlauncher.api.view.Plate>